# interview-copilot

./: .env.example  .envrc  .gitignore  AGENTS.md  Info.plist  README.md  SECURITY.md  vision.md
sidecar/: README.md  pyproject.toml
sidecar/copilot/: __init__.py  __main__.py  answer_delivery.py  answer_provider.py  answer_turn.py  app.py  audio_devices.py  audio_macos.py  clipboard_image.py  clipboard_watcher.py  config.py  cursor_bridge.py  cursor_ide_chat.py  cursor_model_resolve.py  cursor_stream.py  endpointing.py  hf_hub.py  instance.py  interview_prompt.py  interview_quiet.py  listener.py  main_thread.py  notify.py  pipeline_timing.py  runtime_macos.py  screenshot_anthropic.py  screenshot_optimize.py  screenshot_queue.py  screenshot_solve.py  session_archive.py  session_warmup.py  shutdown.py  stt.py  stt_filter.py  stt_glossary.py  stt_glossary_terms.py  stt_live.py  stt_prompt.py  stt_segment.py  stt_worker.py  (+6 more)
sidecar/tests/: conftest.py  test_answer_auto.py  test_answer_barge_in.py  test_answer_delivery.py  test_answer_provider.py  test_answer_provider_stream.py  test_answer_self_merge.py  test_answer_timeout_config.py  test_answer_turn.py  test_app_session.py  test_audio_config.py  test_audio_interview_preset.py  test_auto_answer_speaker.py  test_auto_answer_start.py  test_call_mic_muted_reset.py  test_clipboard_image.py  test_clipboard_watcher.py  test_config_stt.py  test_cursor_bridge.py  test_cursor_ide_chat.py  test_cursor_model_resolve.py  test_cursor_stream_parser.py  test_endpointing.py  test_hf_hub.py  test_import_resume.py  test_instance.py  (+40 more)
(+33 files in other folders)
